<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        >

    <TextView
            android:id="@+id/txtNama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            />

    <TextView
            android:id="@+id/txtGender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            app:layout_constraintEnd_toEndOf="@+id/txtNama"
            app:layout_constraintStart_toStartOf="@+id/txtNama"
            app:layout_constraintTop_toBottomOf="@+id/txtNama"
            />

    <TextView
            android:id="@+id/txtTempat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tempat_lahir"
            app:layout_constraintEnd_toEndOf="@+id/txtGender"
            app:layout_constraintStart_toStartOf="@+id/txtGender"
            app:layout_constraintTop_toBottomOf="@+id/txtGender"
            />

    <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tanggal_lahir"
            app:layout_constraintEnd_toEndOf="@+id/txtTempat"
            app:layout_constraintStart_toStartOf="@+id/txtTempat"
            app:layout_constraintTop_toBottomOf="@+id/txtTempat"
            />

    <TextView
            android:id="@+id/txtAlamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            app:layout_constraintEnd_toEndOf="@+id/txtTanggal"
            app:layout_constraintStart_toStartOf="@+id/txtTanggal"
            app:layout_constraintTop_toBottomOf="@+id/txtTanggal"
            />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnTambahUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/tambah_user"
            />

</androidx.constraintlayout.widget.ConstraintLayout>