<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".TambahUserActivity"
        >

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >

            <ImageButton
                    android:id="@+id/bt_close"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_close_24"
                    />

            <View
                    android:layout_width="10dp"
                    android:layout_height="0dp"
                    />

            <TextView
                    android:id="@+id/name_toolbar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/tambah_user"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="@android:color/white"
                    />

            <ImageButton
                    android:id="@+id/iconAction"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/todo"
                    android:tint="@android:color/white"
                    app:srcCompat="@drawable/ic_baseline_done_24"
                    />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            >

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                >

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nama"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nama"
                        android:inputType="text"
                        android:singleLine="true"
                        />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jenis_kelamin"/>
            <RadioGroup
                    android:id="@+id/radioGroup"
                    android:checkedButton="@+id/radioMale"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_weight="2">
                <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/laki_laki"/>
                <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/perempuan"/>
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tempatLahir"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTempatLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tempat_lahir"
                        android:inputType="text"
                        android:singleLine="true"
                        />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tanggalLahir"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTanggalLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:hint="@string/tanggal_lahir"
                        android:inputType="date"
                        android:singleLine="true"
                        />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/alamat"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAlamat"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:hint="@string/alamat"
                        android:gravity="top|start"
                        android:inputType="text"
                        android:singleLine="true"
                        />

            </com.google.android.material.textfield.TextInputLayout>
            <View
                    android:id="@+id/lyt_spacer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>